--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -26,9 +26,7 @@
   align-items: center;
   padding-top: 60px;
 }
-.main .icon {
-  width: 34px;
-}
+
 .main h3 {
   font-size: 32px;
   line-height: 40px;
@@ -41,25 +39,18 @@
   font-family: inherit;
   min-height: 20rem;
   padding: 1rem;
+  margin: 2vh;
 }
 .main form {
   display: flex;
   flex-direction: column;
   width: 320px;
 }
-.main input[type="text"] {
-  padding: 12px 16px;
-  border: 1px solid #10a37f;
-  border-radius: 4px;
-  margin-bottom: 24px;
-  outline-color: #10a37f;
-}
-.main ::placeholder {
-  color: #8e8ea0;
-  opacity: 1;
-}
+
+
 .main input[type="submit"] {
   padding: 12px 0;
+  margin: 2vh;
   color: #fff;
   background-color: #10a37f;
   border: none;
@@ -72,6 +63,10 @@
   
 }
 
+.main .select {
+  margin: 2vh;
+}
+
 .main .result {
   font-weight: bold;
   margin-top: 40px;
@@ -79,16 +74,27 @@
 
 .main p {
   text-align: center;
+  max-width: 50rem;
 }
-.wordNotClicked {
+
+.grid {
+  display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+    margin: 2vh;
+
+}
+.grid .wordNotClicked {
   border: 1px solid black;
+  border-radius: 5px;
   display: inline-block;
   padding: 0.5rem;
   text-align: center;
 }
 
-.wordClicked {
+.grid .wordClicked {
   border: 1px solid black;
+  border-radius: 5px;
   display: inline-block;
   padding: 0.5rem;
   background-color: pink;
